fixed the blurry text

--- a/src/Styles/Scss/_main.scss
+++ b/src/Styles/Scss/_main.scss
@@ -29,7 +29,7 @@ html {
     }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
     html {
         font-size: 10px;
     }
